--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -33,4 +33,4 @@ jobs:
       - run: semgrep ci
         env:
            # Add the rules that Semgrep uses by setting the SEMGREP_RULES environment variable. 
-           SEMGREP_RULES: rules.yaml # more at semgrep.dev/explore
+           SEMGREP_RULES: p/default # more at semgrep.dev/explore
